--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+
+.day-title {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.temp-title {
+  font-size: 16px;
+}
+
+.weather-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.weather-tile {
+  background-color: #87ceeb80;
+  padding-top: 10px;
+}
+
+.main-col {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
